--- a/spring-cloud-web-admin-feign/src/main/resources/application.yml
+++ b/spring-cloud-web-admin-feign/src/main/resources/application.yml
@@ -9,3 +9,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+#feign自带熔断
+feign:
+  hystrix:
+    enabled: true
